# Omnitrain

./: .gitignore  DETAILS.md  LICENSE  README.md  config.yaml  omni_cli.py  production_report.json  pyproject.toml  requirements.txt  setup.py  setup.sh
docs/: CAPABILITIES.md  CONECTOMA_SPEC.md  DETAILS.md  HOW_TO_CONNECT.md  LIQUID_NETWORKS_DB.md  MASCOTS.md  THEORETICAL_FRAMEWORKS.md  TRAINING_PIPELINE.md
example_robot/: config.yaml  config_isaac.yaml  generate_data.py
scratch/: preview_dashboard.py
src/: omni_bus_core.cpp
src/cpp_engine/: CMakeLists.txt
src/cpp_engine/include/: OmniEngine.hpp  SafetyGuard.hpp
src/cpp_engine/src/: OmniEngine.cpp  main.cpp
src/omnitrain/: Omnitrain.code-workspace  benchmark_v2.py  cli.py  curriculum.py  dataset.py  diagnose_text_ai.py  diagnostics.py  edgecp_bridge.py  exporter.py  fusion_core.py  heads.py  health_check.py  isaac_bridge.py  launcher.py  monitor.py  omni_shield.py  omni_stream.py  onnx_exporter.py  plugins.py  plugins_real.py  plugins_ros2.py  pruner.py  quantize_omni.py  recorder.py  ros2_bridge.py  safety_guard.py  snpe_runner.py  telemetry.py  tensorrt_runner.py  test_chaos_overload.py  test_industrialization.py  test_omni_stream.py  test_supreme.py  token_bus.py  trainer.py  universal_trainer.py  ventuno_bridge.py
src/omnitrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chaos_overload.py  test_integrity.py  test_snpe.py  test_stress.py  test_supreme.py
