[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "omnitrain"
version = "2.1.0"
description = "Multimodal AI Framework for Robotics"
dependencies = [
    "numpy",
    "torch",
    "rich",
    "pyyaml",
    "prompt_toolkit>=3.0"
]

[project.scripts]
omni = "omnitrain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
